Super nearly there; some conclusions to finish

--- a/Thesis/Appendices/Plasma_Machine_Parameters.tex
+++ b/Thesis/Appendices/Plasma_Machine_Parameters.tex
@@ -65,5 +65,10 @@ The ion collisionality is defined as the ratio of the ion-ion collision frequenc
 	\nu_{*i} \,=\, \frac{\nu_{ii}}{\omega_{bi}} \label{eq:collisionality}
 \end{align}
 
+The shape of the neutral density profile $n_0$ is set by the parameters given in Eq.~\ref{eq:neutral_density}.
+\begin{align}
+	\theta \,=\, 0.1~,~~~ k \,=\, 1000~\text{m}^{-1}~,~~~ d \,=\, 2~\text{cm}
+\end{align}
+Any proportionality constant that gives the equation proper units of density is set to unity.
 %\inputminted[firstline=24, lastline=33, tabsize=4, breaklines=true, fontsize=\footnotesize, frame=single, linenos=true]{python}{../FiPy_Model/parameters.py}
 
