--- a/Thesis/Introduction/Introduction.tex
+++ b/Thesis/Introduction/Introduction.tex
@@ -102,9 +102,8 @@ The system of partial differential equations that are established are solved by 
 The details of this numerical method used is described in Section~\ref{sec:numerical_method}.
 This includes the intricacies of the solver, and the choice of solver.
 
-The results of the investigation are presented in Chapter~\ref{chapter:results}, which are then compared to real-world results from literature.
-Uncertainties in the model as they pertain to experimental measurements are also a topic in this section.
-
+The results of the investigation are presented in Chapter~\ref{chapter:results}, also encompasses unexpected phenomena.
 Finally, the answers to the research questions and summary of the investigation is in Chapter~\ref{chapter:conclusion}.
 In addition, possible ideas for future research on this topic are presented.
+%Uncertainties in the model as they pertain to experimental measurements are also a topic in this section.
 
