--- a/Thesis/Physics_Bifurcation/Physics_Bifurcation.tex
+++ b/Thesis/Physics_Bifurcation/Physics_Bifurcation.tex
@@ -273,7 +273,7 @@ As $b$ approaches zero from some positive value, the size of the hysteresis shri
 	{fig:Bif_hysteresis}
 %}}}
 
-\subsection{Oscillatory Transition Bifurcation}
+\subsection{Oscillatory Transition Bifurcation} \label{ssec:oscillatory_transition}
 The third type of transition dynamics in tokamak plasmas is oscillatory, in which the system rapidly oscillates between the two different modes \cite{ryter_survey_2013, zohm_mhd_1995}.
 This phenomenon is referred to by various names, including dithering, I--mode, predator--prey oscillations, and limit cycle oscillations.
 It is the most enigmatic of the three discussed, as the least is known about it, and requires a more-complex model than Eq.~\ref{eq:sharp_bif}.
