Committee names; removed Numerical Methods Ch

--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -14,9 +14,9 @@
 \newcommand{\monthYear}{February 2018}
 
 \newcommand{\firstCommitteeMember}{dr. H.J. de Blank}
-\newcommand{\secondCommitteeMember}{Second Committee Member}
-\newcommand{\thirdCommitteeMember}{Third Committee Member}
-\newcommand{\fourthCommitteeMember}{Fourth Committee Member}
+\newcommand{\secondCommitteeMember}{prof.dr. M.R. de Baar}
+\newcommand{\thirdCommitteeMember}{Dr. E. Westerhof}
+\newcommand{\fourthCommitteeMember}{Dr. J.H.E. Proll}
 %}}}
 
 \title{\doctitle}
