--- a/Thesis/titlepage.tex
+++ b/Thesis/titlepage.tex
@@ -38,7 +38,7 @@ Supervisor:\\
 	\firstCommitteeMember\\
 \end{tabular}
 \\ \vspace*{5mm}
-Committee Members:\\
+Committee Members:\\\vspace*{2mm}
 \begin{tabular}{rl}
 	\secondCommitteeMember\\
 	\thirdCommitteeMember\\
