--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -15,8 +15,8 @@
 
 \newcommand{\firstCommitteeMember}{dr. H.J. de Blank}
 \newcommand{\secondCommitteeMember}{prof.dr. M.R. de Baar}
-\newcommand{\thirdCommitteeMember}{Dr. E. Westerhof}
-\newcommand{\fourthCommitteeMember}{Dr. J.H.E. Proll}
+\newcommand{\thirdCommitteeMember}{dr. J.H.E. Proll}
+\newcommand{\fourthCommitteeMember}{dr. E. Westerhof}
 %}}}
 
 \title{\doctitle}
@@ -117,9 +117,11 @@
 \normalsize
 \clearemptydoublepage
 
-\chapter*{Abstract}\label{chapter:abstract}
-%\input{ABSTRACT FILE HERE!!}
-\addcontentsline{toc}{chapter}{Abstract}
+%\chapter*{Abstract}\label{chapter:abstract}
+\begin{abstract}
+	\addcontentsline{toc}{chapter}{Abstract}
+	\input{Abstract.txt}
+\end{abstract}
 
 \cleardoublepage
 \tableofcontents
